# cardscan

./: .gitignore  README.md  pyproject.toml
cardscan/: __init__.py
cardscan/image_processing/: __init__.py  colors.py  contour_hierarchy.py  frame_contour.py  transforms.py
cardscan/pipeline/: pipeline.py
cardscan/pipeline_instances/: __init__.py  display_transforms.py  rect_perspective_pipeline.py
cardscan/visualize/: __init__.py  cam_app.py  draw_pip_app.py  helper.py  tile_gallery.py
cardscan/visualize_pipeline_app/: __init__.py  visualize_pipeline_app.py
examples/: cam_draw_pip.py  cam_simple.py  cam_visual_contours.py  cam_visual_pipeline.py  from_file.py
